# sound-theme-hedgehog

./: .gitignore  CREDITS  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.theme.in
po/: POTFILES.in
stereo/: Makefile.am  alarm-clock-elapsed.oga  battery-low.oga  bell.oga  camera-shutter.oga  complete.oga  desktop-login.oga  desktop-logout.oga  device-added.oga  dialog-cancel.oga  dialog-error.oga  dialog-ok.oga  link-pressed.oga  message-new-instant.oga  tooltip-popup.oga  window-attention.oga  window-unmaximized.oga  window-unminimized.oga
