NULL =

sounddir = $(datadir)/sounds/freedesktop/stereo

sound_DATA =                            \
	audio-channel-front-center.ogg	\
	audio-channel-front-left.ogg	\
	audio-channel-front-right.ogg	\
	audio-channel-rear-center.ogg	\
	audio-channel-rear-left.ogg	\
	audio-channel-rear-right.ogg	\
	audio-channel-side-left.ogg	\
	audio-channel-side-right.ogg	\
	audio-test-signal.ogg		\
	battery-low.ogg			\
	bell.ogg			\
	button-pressed.ogg		\
	button-toggle-off.ogg		\
	button-toggle-on.ogg		\
	complete-media-burn.ogg		\
	desktop-login.ogg		\
	desktop-logout.ogg		\
	dialog-cancel.ogg		\
	dialog-error.ogg		\
	dialog-information.ogg		\
	dialog-ok.ogg			\
	dialog-question.ogg		\
	dialog-warning.ogg		\
	link-pressed.ogg		\
	menu-click.ogg			\
	message-new-email.ogg		\
	message-new-instant.ogg		\
	phone-incoming-call.ogg		\
	phone-outgoing-busy.ogg		\
	power-unplug.ogg		\
	service-login.ogg		\
	service-logout.ogg		\
	suspend-error.ogg		\
	trash-empty.ogg			\
	window-close.ogg		\
	window-maximized.ogg		\
	window-minimized.ogg		\
	window-move-start.ogg		\
	window-move-stop.ogg		\
	window-slide.ogg		\
	$(NULL)

DISTCLEANFILES = \
	$(NULL)
